<resources>
    <string name="app_name">BoardGamer</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="next">next</string>
    <string name="previous">previous</string>

    <string name="app_logo">App Logo</string>
    <string name="login">Login</string>
    <string name="welcomeText">Login and let\'s go!</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter email</string>
    <string name="password">password</string>
    <string name="password_hint">Enter password</string>
    <string name="btnRegistration">Register new account</string>
    <string name="signUpText">Sign up and start organizing your Game Nights</string>
    <string name="name_hint">Enter name</string>
    <string name="postcode_hint">Enter postcode</string>
    <string name="city_hint">Enter city</string>
    <string name="street_hint">Enter street</string>
    <string name="sign_up">Sign up</string>
    <string name="copyright">© 2025 Board Gamer App</string>
    <string name="error_invalidLogin">Enter email and password</string>
    <string name="success_login_successful">Login successful</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_network_server">Network/server error</string>
    <string name="success_registration_successful">Registration successful</string>
    <string name="error_registration_failed">Registration failed</string>
    <string name="url">Header/key incorrect or incorrect project URL</string>
    <string name="error_mail_already_exists">Email address already exists</string>
    <string name="error_mail">Email address already in use or password too short (at least 6 characters)</string>

    <string name="userIcon">User icon</string>
    <string name="nextGameNight">Next Game Night</string>
    <string name="upcomingGameNights">Upcoming Game Nights</string>
    <string name="newGameNightButton">Create new Game Night</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="gameNightDate">"Game Night date: "</string>
    <string name="gameNightLocation">"Game Night location: "</string>
    <string name="gameNightHost">"Game Night host: "</string>
    <string name="gameNightDetailsButton">View details</string>
    <string name="error_all_files_filled_out">Please fill in all fields</string>
    <string name="error_profile_creation_failed">Profile creation failed</string>
    <string name="error_name_already_taken">Name is already taken</string>
    <string name="gameNightDetails">Game Night details</string>
    <string name="btnVoting">Voting</string>
    <string name="btnDinner">Dinner</string>
    <string name="btnRating">Rating</string>
    <string name="btnSuggestions">Suggestions</string>
    <string name="add_suggestions">Add</string>
    <string name="newSuggestion">New suggestion</string>
    <string name="suggestionText">Add your Game suggestions here</string>
    <string name="votingText">Vote for Game suggestions here</string>
    <string name="votingList">Voting list</string>
    <string name="thumbsUp">Thumbs up</string>
    <string name="neutral">Neutral</string>
    <string name="thumbsDown">Thumbs down</string>
    <string name="save_voting">Save votings</string>
    <string name="btnEnterDate">Enter date (dd.mm.yyyy)</string>
    <string name="btnEnterTime">Choose time</string>
    <string name="createNewGameNight">Create new Game Night</string>
    <string name="success_profile_created">Profile created</string>
    <string name="addNewGameNight">Add new Game Night</string>
    <string name="rateHost">Rate host</string>
    <string name="rateFood">Rate food</string>
    <string name="rateEvening">Rate Game Night</string>
    <string name="ratingButton">Submit rating</string>
    <string name="ratings">Give your feedback on the previous Game Night</string>
    <string name="foodChoice">Choose your favorite type of food</string>
    <string name="save_foodChoice">Save food choice</string>
    <string name="loading_failed">Loading failed</string>
    <string name="no_data">No data</string>
    <string name="insert_error">Insert error</string>
    <string name="data_saved">Data saved</string>
    <string name="votingDescription">Click the thumbs icon to switch between like, neutral, and dislike</string>
    <string name="comment">Comment</string>
    <string name="german">German\n</string>
    <string name="italian">Italian</string>
    <string name="greek">Greek</string>
    <string name="turkish">Turkish</string>
    <string name="indian">Indian</string>
    <string name="mexican">Mexican</string>
    <string name="foodChoiceOverview">See your guests\' food choices</string>
    <string name="foodReminder">Don\'t forget - Choose your favorite cuisine for the next game night.</string>
    <string name="guestName">Guest name:</string>
    <string name="guestChoice">Food choice:</string>
    <string name="messages_chat">Chat Messages</string>
    <string name="sendMessage">Send</string>
    <string name="enterMessage">Enter message</string>
    <string name="no_settings_available">No settings available</string>
    <string name="majorityFoodChoice">Majority food choice:</string>
    <string name="drawn">No identifiable majority</string>
</resources>