<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".FoodActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        app:srcCompat="@drawable/board_gamer_app_logo" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/userIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        app:srcCompat="@drawable/user_icon" />

    <TextView
        android:id="@+id/foodChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/foodChoice"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/foodTypeGroup"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/saveFoodChoiceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodChoice">

        <RadioButton
            android:id="@+id/germanOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/german" />

        <RadioButton
            android:id="@+id/italianOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italian" />

        <RadioButton
            android:id="@+id/greekOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greek" />

        <RadioButton
            android:id="@+id/turkishOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turkish" />

        <RadioButton
            android:id="@+id/indianOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indian" />

        <RadioButton
            android:id="@+id/mexicanOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mexican" />
    </RadioGroup>

    <Button
        android:id="@+id/saveFoodChoiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_foodChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="visible"
        app:itemActiveIndicatorStyle="@style/CustomActiveIndicator"
        app:itemIconSize="22dp"
        app:itemRippleColor="@color/mid_blue"
        app:itemTextAppearanceActiveBoldEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        tools:ignore="VisualLintBottomNav"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>



