<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textSuggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votingList"
            android:textSize="18sp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/thumbUp"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/thumbsUp"
                android:scaleType="centerInside"
                android:src="@drawable/thumbs_up" />

            <ImageButton
                android:id="@+id/neutral"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/neutral"
                android:scaleType="centerInside"
                android:rotation="90"
                android:src="@drawable/thumbs_up" />

            <ImageButton
                android:id="@+id/thumbDown"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/thumbsDown"
                android:scaleType="centerInside"
                android:src="@drawable/thumbs_down" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
