<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".RatingActivity">

<ImageView
    android:id="@+id/logo"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_marginStart="32dp"
    android:contentDescription="@string/app_logo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.003"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.067"
    app:srcCompat="@drawable/board_gamer_app_logo" />

<ImageView
    android:id="@+id/userIcon"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:contentDescription="@string/userIcon"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.869"
    app:layout_constraintStart_toEndOf="@+id/logo"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.091"
    app:srcCompat="@drawable/user_icon" />

    <TextView
        android:id="@+id/ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/ratings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="347dp"
        android:layout_height="278dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="24dp"
        android:background="@null"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:padding="12dp"
        android:stateListAnimator="@null"
        app:cardBackgroundColor="@color/white"
        app:strokeColor="@color/mid_blue"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/ratings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/rateHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rateHost"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <RatingBar
                    android:id="@+id/ratingBarHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5" />

                <TextView
                    android:id="@+id/rateFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/rateFood"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <RatingBar
                    android:id="@+id/ratingBarFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5" />

                <TextView
                    android:id="@+id/rateEvening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/rateEvening"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <RatingBar
                    android:id="@+id/ratingBarEvening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/ratingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mid_blue"
        android:text="@string/ratingButton"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintVertical_bias="0.313" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:visibility="visible"
    app:itemActiveIndicatorStyle="@style/CustomActiveIndicator"
    app:itemIconSize="22dp"
    app:itemRippleColor="@color/mid_blue"
    app:itemTextAppearanceActiveBoldEnabled="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:menu="@menu/bottom_navigation_menu"
    tools:ignore="VisualLintBottomNav"
    tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>



